[package]
name = "tonic-async-interceptor"
authors = ["Joe Dahlquist <joe@arcanyx.com>"]
categories = ["web-programming", "network-programming", "asynchronous", "authentication"]
description = "Async variant of Tonic's interceptor function"
documentation = "https://docs.rs/tonic-async-interceptor"
edition = "2018"
homepage = "https://github.com/arcanyx-pub/tonic-async-interceptor"
keywords = ["async", "grpc", "tonic", "protobuf", "interceptor"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/arcanyx-pub/tonic-async-interceptor"
version = "0.1.2"

[dependencies]
bytes = "1.5.0"
http = "0.2.11"
http-body = "0.4.4"
pin-project = "1.1.3"
tonic = "0.10.2"
tower-layer = "0.3.2"
tower-service = "0.3.2"

[dev-dependencies]
tokio = {version = "1.34.0", features = ["rt", "macros"]}
tower = {version = "0.4.13", features = ["full"]}
